@@ -251,6 +251,23 @@ protected:
 };
 
 
+class KSpreadUndoAutofill : public KSpreadUndoAction
+{
+public:
+    KSpreadUndoAutofill( KSpreadDoc *_doc, KSpreadTable *_table, QRect &_rect );
+    virtual ~KSpreadUndoAutofill();
+
+    virtual void undo();
+    virtual void redo();
+    void createListCell( QCString &list, KSpreadTable* table );
+protected:
+    QRect m_selection;
+    QCString m_data;
+    QCString m_dataRedo;
+    QString m_tableName;
+};
+
+
 class KSpreadUndo
 {
 public:
